Fixed Invisible Container Bug

--- a/core-markup-webapp/src/app/app.component.scss
+++ b/core-markup-webapp/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .menu-container{
   position: fixed;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-40%);
   margin: 0;
   z-index: 100;
 }
